ports/stm32/err.log
dma.c:225:50: error: 'HAL_DMA1_CH1_I2C_TX' undeclared here (not in a function)
 const dma_descr_t dma_I2C_1_TX = {DMA1_Channel1, HAL_DMA1_CH1_I2C_TX, dma_id_1, &dma_init_struct_spi_i2c};
                                                  ^
dma.c:226:50: error: 'HAL_DMA1_CH2_I2C_TX' undeclared here (not in a function)
 const dma_descr_t dma_I2C_1_RX = {DMA1_Channel2, HAL_DMA1_CH2_I2C_TX, dma_id_2, &dma_init_struct_spi_i2c};
                                                  ^
make: *** [build-STM32F3DISC/dma.o] Error 1
